# wiump

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build-after-merge.yaml  release.yaml  release.yml  test.yaml
src/: main.rs
