[package]
name = "wiump"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
netstat2 = "0.11.1"
sysinfo = "0.36.1"
tabwriter = "1.4.1"
users = "0.11.0"

[profile.release]
opt-level = "z"   # Optimize for size.
lto = true        # Enable link time optimization.
codegen-units = 1 # Reduce parallel code generation units.
strip = true      # Strip debug symbols.
panic = "abort"   # Abort on panic.
